k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: juju-wedding-website-service
  namespace: juju-wedding
spec:
  selector:
    app: gatsby-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
